fix double quoting bugs

--- a/tex/our_body.tex
+++ b/tex/our_body.tex
@@ -87,7 +87,7 @@ In order to reduce fatigue, the test was divided into two phases with a minute o
 The subjective ratings of the pages were arranged separately after the experiment. The subjects reviewed the 40 experimental pages once again with no time limit. The subjects were asked to judge the aesthetic quality of "good" or "bad" for each page. And all subjects confirmed the pages they saw in the test had never been seen before.
 
 \subsection{data collection}
-Each page in the test gets a final score based on how many ¡°good¡± or ¡°bad¡± ratings it received. The figure\ref{fig:score} is the distribution of the 40 pages on the scores.
+Each page in the test gets a final score based on how many "good" or "bad" ratings it received. The figure\ref{fig:score} is the distribution of the 40 pages on the scores.
 
 the distribution is apparently bimodal. The 20 pages with score less than 0.5 are exactly same pages collected from the www. In other words, these 20 pages are recognized as "bad" pages without any doubt.
 
@@ -166,7 +166,7 @@ Now we analyze the visual entropies from two aspects of the eye tracking data: l
 \subsubsection{Entropy in gaze transitions}
 Entropy of eye movements was first introduced in a paper by Tole et al.\cite{Tole1983} as a measure of cognitive loads, describing the changes of looking behaviors of eleven pilots in the conditions of different tasks. The model was also adopted in analysis of eye tracking data of car driving\cite{Gilland2008}.
 
-Hooge\cite{Hooge2013} used a similar metric of ¡°Scan path entropy¡± to quantify gaze guidance to a specified target.
+Hooge\cite{Hooge2013} used a similar metric of "Scan path entropy" to quantify gaze guidance to a specified target.
 
 This paper follows the Tole's definition of visual entropy based on Markov chain models.
 
@@ -488,7 +488,7 @@ the results of this experiment prove that our aesthetic judgments of webpages is
 
 The success of VAE is at least partially attributed to the interpolation with Gaussians in the belief that the fixation distribution is continuous. In addition, projecting the fixations during the entire 3s on a single plane makes the data points denser. Correspondingly, the failure of the entropy in gaze sequence is possibly due to the extra temporal dimension making the data points much sparser. It is hard to conclude so far that temporal information is irrelevant to our aesthetic judgements. Maybe in the future a more informative model could be found that is more effective in solving this problem.
 
-A lower VAE can be interpreted as less effort expended in eye orienting, searching and less distraction in looking - in other words, lower perceptual or attentional load. The evidence that aesthetically pleasing pages have lower VAEs supports the fluency hypothesis\cite{Reber2004}, and somehow explains why ¡°what is beautiful is usable¡±\cite{Tractinsky2000}. VAE is based on the special information of eye fixations. As a new objective and quantitative index of eye tracking data, it is surely not just a metric for aesthetics. VAE in nature is more related to our perceptual and motor control ability: eye gazing is like mouse pointing. That's the reason why some visual design principles for eye guidance are quite similar to Fitts law\cite{MacKenzie1992}.
+A lower VAE can be interpreted as less effort expended in eye orienting, searching and less distraction in looking - in other words, lower perceptual or attentional load. The evidence that aesthetically pleasing pages have lower VAEs supports the fluency hypothesis\cite{Reber2004}, and somehow explains why "what is beautiful is usable"\cite{Tractinsky2000}. VAE is based on the special information of eye fixations. As a new objective and quantitative index of eye tracking data, it is surely not just a metric for aesthetics. VAE in nature is more related to our perceptual and motor control ability: eye gazing is like mouse pointing. That's the reason why some visual design principles for eye guidance are quite similar to Fitts law\cite{MacKenzie1992}.
 
 Relative-VAE can be interpreted as a balance between using as low of a VAE as possible to perceive as much as possible useful information in the constraint of the screen. This explanation is in line with the aesthetic principle: "maximum effect for minimum means"\cite{Hekkert2006}, which is rooted in the Evolutionary Aesthetics\cite{Shimamura2012}. The theory argues that the basic aesthetic preferences of Homo sapiens have evolved in order to enhance survival and reproductive success.
 
