--- a/tex/our_references.bib
+++ b/tex/our_references.bib
@@ -4,6 +4,7 @@
   journal={Current Directions in Psychological Science},
   volume={5},
   number={3},
+  year={1996},
   pages={94--101}
 }
 
@@ -275,7 +276,8 @@
 @article{Santella,
    author = {Santella, Anthony},
    title = {Eye Tracking for Aesthetics: Unexplored Possibilities},
-   type = {Journal Article}
+   type = {Journal Article},
+   year = {2004}
 }
 
 @book{Shimamura2012,
