--- a/tex/our_proceeding.tex
+++ b/tex/our_proceeding.tex
@@ -165,7 +165,7 @@
 \begin{abstract}
 Today eye trackers are extensively used in user interface evaluations. However, it's difficult to analyze and interpret eye tracking data from an aesthetic point of view. To find quantitative links between eye movements and aesthetic experience, we tracked 30 observers' eye movements during initial landings of 40 webpages (each page for 3 seconds). The webpages were also rated based on the observers' aesthetic judgments.
 
-The Shannon entropy was used to analyze the eye tracking data. The result shows that the heat map entropy (visual attention entropy, VAE) is highly correlated with the observers' aesthetic judgements of the webpages. VAE is interpreted as the fluency or chaos in observers' attentional processes. Its improved version, relative VAE (rVAE), has more significant correlation with the perceived aesthetics.(r=-0,65; F= 26.84,P=0.000007). This single metric alone can distinguish between good and bad looking pages with about 87.5\% correctness. Further investigation reveals that the performance of both VAE and rVAE became stable after 1 second. The curves indicate that their performances could be better if the tracking time were extended slightly beyond 3 seconds.
+The Shannon entropy was used to analyze the eye tracking data. The result shows that the heatmap entropy (visual attention entropy, VAE) is highly correlated with the observers' aesthetic judgements of the webpages. VAE is interpreted as the chaos in observers' attentional processes. Its improved version, relative VAE (rVAE), has more significant correlation with the perceived aesthetics.(r=-0,65; F= 26.84,P=0.000007). This single metric alone can distinguish between good and bad looking pages with about 87.5\% correctness. Further investigation reveals that the performance of both VAE and rVAE became stable after 1 second. The curves indicate that their performances could be better if the tracking time were extended slightly beyond 3 seconds.
 \end{abstract}
 
 \category{H.5.m.}{Information Interfaces and Presentation
