--- a/tex/our_proceeding.tex
+++ b/tex/our_proceeding.tex
@@ -101,7 +101,7 @@
 \makeatother
 \urlstyle{leo}
 
-% To make various LaTeX processors do the right thing with page size.
+% To make various LaTeX processors do the right thing with page sizep.
 \def\pprw{8.5in}
 \def\pprh{11in}
 \special{papersize=\pprw,\pprh}
@@ -171,7 +171,7 @@ The Shannon entropy was used to analyze the eye tracking data. The result shows 
 \category{H.5.m.}{Information Interfaces and Presentation
   (e.g. HCI)}{Miscellaneous}{}{}
 
-\keywords{\plainkeywords}
+\keywords{\plainkeywords}p
 
 \input{our_body}
 
