--- a/tex/our_proceeding.tex
+++ b/tex/our_proceeding.tex
@@ -171,7 +171,7 @@ The Shannon entropy was used to analyze the eye tracking data. The result shows 
 \category{H.5.m.}{Information Interfaces and Presentation
   (e.g. HCI)}{Miscellaneous}{}{}
 
-\keywords{\plainkeywords}p
+\keywords{\plainkeywords}
 
 \input{our_body}
 
