coded for enumR_rvae.m

--- a/tex/Entropy_of_heat_map_is_predictive_to_aesthetics_of_webpages.tex
+++ b/tex/Entropy_of_heat_map_is_predictive_to_aesthetics_of_webpages.tex
@@ -9,7 +9,7 @@
     \DeclareGraphicsExtensions{.eps}
 \fi
 
-\begin{document}
+\begin{dpocument}
 \title{Entropy of heat map is predictive to aesthetics of webpages}
 \author {
     \IEEEauthorblockN{Zhenyu Gu, Chenhao Jin}
